<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/materialEditText_login_password"
            android:background="@drawable/button_confirm_dark"
            android:text="@string/ForgetPassword"
            android:textColor="@color/White" />


        <CheckBox
            android:id="@+id/checkBox_login_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/materialEditText_login_password"
            android:layout_alignTop="@id/button_login_login"
            android:layout_alignBottom="@id/button_login_login"
            android:layout_centerHorizontal="true"
            android:checked="true"
            android:text="自动登录" />

        <Button
            android:id="@+id/button_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/materialEditText_login_password"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_confirm"
            android:text="@string/Login"
            android:textColor="@color/White" />

        <ImageView
            android:id="@+id/imageView_login_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login_login"
            android:gravity="end">

            <CheckBox
                android:id="@+id/checkBox_login_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="记住密码"
                android:visibility="gone" />

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/materialEditText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/materialEditText_login_number"
            android:autofillHints="textPassword"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:met_checkCharactersCountAtBeginning="false"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/colorPrimary"
            app:met_helperTextColor="@android:color/holo_red_light"
            app:met_iconPadding="0dp"
            app:met_maxCharacters="18"
            app:met_minCharacters="7"
            app:met_textColor="@color/leftSelectableTextColor"
            app:met_textColorHint="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/materialEditText_login_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_login_logo"
            android:layout_marginTop="50dp"
            android:autofillHints="number"
            android:hint="@string/Sno"
            android:inputType="number"
            app:met_checkCharactersCountAtBeginning="false"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/colorPrimary"
            app:met_helperTextColor="@android:color/holo_red_light"
            app:met_maxCharacters="10"
            app:met_minCharacters="10"
            app:met_textColor="@color/leftSelectableTextColor"
            app:met_textColorHint="@color/colorPrimary" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_login_logo_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WindowBackgroundColor"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/WelcomePhoto"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/logo" />
    </LinearLayout>

</RelativeLayout>