<?xml version="1.0" encoding="utf-8"?>
<jn.mjz.aiot.jnuetc.view.custom.ThemedSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/srl_myself"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_myself_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <FrameLayout
                android:id="@+id/frameLayout_myself_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_fragment_myself_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawableEnd="@drawable/ic_arrow_right_gray"
                android:gravity="start|center_vertical"
                android:padding="5dp"
                android:text="@string/RepairRankingAndStatistic"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_fragment_myself_processing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawableEnd="@drawable/ic_arrow_right_gray"
                android:gravity="start|center_vertical"
                android:padding="5dp"
                android:text="处理中"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_fragment_myself_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawableEnd="@drawable/ic_arrow_right_gray"
                android:gravity="start|center_vertical"
                android:padding="5dp"
                android:text="已维修"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_fragment_myself_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawableEnd="@drawable/ic_arrow_right_gray"
                android:gravity="start|center_vertical"
                android:padding="5dp"
                android:text="@string/Admin"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_fragment_myself_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:drawableEnd="@drawable/ic_arrow_right_gray"
                android:gravity="start|center_vertical"
                android:padding="5dp"
                android:text="@string/Settings"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</jn.mjz.aiot.jnuetc.view.custom.ThemedSwipeRefreshLayout>
